--- a/src/app/pages/scanner/scanner.page.html
+++ b/src/app/pages/scanner/scanner.page.html
@@ -5,5 +5,5 @@
 </ion-header>
 
 <ion-content>
-  <scanner></scanner>
+  <scanner [activateScanner]="true" (code)="code($event)"></scanner>
 </ion-content>
