--- a/src/app/components/scanner/scanner.component.scss
+++ b/src/app/components/scanner/scanner.component.scss
@@ -1,5 +1,12 @@
 .scanner-container {
-    // background-color: red;
-    width: 100%;
+    // display: flex;
+
+    // align-items: center;
+    // justify-content: center;
     height: 100%;
+    text-align: center;
 }
+
+// ion-button {
+//     margin: auto
+// }
