--- a/src/app/components/overview-day/overview-day.component.scss
+++ b/src/app/components/overview-day/overview-day.component.scss
@@ -21,9 +21,30 @@
 
 .item {
     // border: groove;
-    margin: 2px 8px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: stretch;
+    margin: 0px 8px;
+    position: relative;
+    // background: rgba(0, 0, 0, .5);
+    // opacity: .5;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: flex-start;
+    // align-items: stretch;
+}
+
+.item-label {
+    position: absolute;
+    opacity: 1;
+    left: 0px;
+    top: 0px;
+    font-size: 15px;
+    border-top: 1px solid white;
+    width: 100%;
+    z-index: 10;
+    // color: black;
+}
+
+.item-machine-label {
+    position: absolute;
+    left: 40%;
+    z-index: 10;
 }
