ADDED Settings: machines, developer

--- a/src/app/pages/overview/overview.page.html
+++ b/src/app/pages/overview/overview.page.html
@@ -1,9 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>overview</ion-title>
+    <ion-title>Overview</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <app-overview-day [timeDay]="timeDay"></app-overview-day>
+  <app-overview-day [_timeDay]="timeDay"></app-overview-day>
 </ion-content>
