--- a/src/app/components/scanner/scanner.component.html
+++ b/src/app/components/scanner/scanner.component.html
@@ -1,3 +1,3 @@
 <div class="scanner-container">
-  <ion-button (click)="scan()">SCAN</ion-button>
+  <ion-button (click)="simulateScan()">Simulate Scan</ion-button>
 </div>
