--- a/src/app/pages/overview/overview.page.html
+++ b/src/app/pages/overview/overview.page.html
@@ -1,5 +1,10 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="end">
+      <ion-button (click)="print()">
+        <ion-icon name="print-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
     <ion-title>Overview</ion-title>
   </ion-toolbar>
 </ion-header>
