--- a/src/app/components/scanner/scanner.component.scss
+++ b/src/app/components/scanner/scanner.component.scss
@@ -1,12 +1,19 @@
-.scanner-container {
-    // display: flex;
-
-    // align-items: center;
-    // justify-content: center;
-    height: 100%;
-    text-align: center;
+.select-work {
+    grid-area: 4 / 2 / 4 / 2;
 }
 
-// ion-button {
-//     margin: auto
-// }
+.heading {
+    grid-area: 2 / 2 / 2 / 2;
+    text-align:center
+}
+
+.button-scan {
+    grid-area: 1 / 1 / 4 / 3;
+}
+
+.scanner-container {
+    height: 100%;
+    display: grid;
+    grid-template-columns: 20px auto 20px;
+    grid-template-rows: auto 100px 30% 100px 5%;
+}
