--- a/src/app/pages/scanner/scanner.page.scss
+++ b/src/app/pages/scanner/scanner.page.scss
@@ -1,15 +1,17 @@
 ion-content {
     height: 100%;
-    border: groove;
+    // border: groove;
     display: grid;
     grid-template-columns: 20px 20px auto 20px 20px;
     grid-template-rows: 25% 20px auto 20px 25%;
     grid-template-areas: 
-        "space space space space space"
-        "space timer timer timer space"
-        "space timer conte timer space" 
-        "space timer timer timer space"
-        "space space space space space";
+        "space space space space space space space"
+        "space timer timer timer timer timer space"
+        "space timer conte conte conte timer space" 
+        "space timer conte conte conte timer space"
+        "space timer conte conte conte timer space"
+        "space timer timer timer timer timer space"
+        "space space space space space space space"
 }
 
 .content-container {
@@ -21,19 +23,19 @@ ion-content {
 }
 
 .timer-container-top {
-    grid-area: 2 / 2 / 2 / 5;
+    grid-area: 2 / 3 / 2 / 5;
 }
 
 .timer-container-right {
-    grid-area: 3 / 4 / 3 / 4;
+    grid-area: 3 / 4 / 5 / 4;
 }
 
 .timer-container-bottom {
-    grid-area: 4 / 2 / 4 / 5;
+    grid-area: 4 / 2 / 4 / 4;
 }
 
 .timer-container-left {
-    grid-area: 3 / 2 / 3 / 2;
+    grid-area: 2 / 2 / 4 / 2;
 }
 
 .size-full {
